<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gads_background"
    tools:context=".ProjectSubmissionActivity">


    <TextView
        android:id="@+id/submission"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="10dp"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:text="@string/project_submission"
        android:textAlignment="center"
        android:textColor="#FFA000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_header" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/corners_button"
        android:defaultFocusHighlightEnabled="false"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="#8F8B8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/submission" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/corners_button"
        android:defaultFocusHighlightEnabled="false"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="#8F8B8B"
        app:layout_constraintEnd_toStartOf="@+id/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submission" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/corners_button"
        android:defaultFocusHighlightEnabled="false"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:labelFor="@id/github_link"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="#8F8B8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/github_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/corners_button"
        android:defaultFocusHighlightEnabled="false"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:hint="@string/project_on_github_link"
        android:inputType="textMultiLine|text"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="#8F8B8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <Button
        android:id="@+id/project_submit_btn"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/round_gradient_button"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_link" />

    <ImageView
        android:id="@+id/gads_icon"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/gads_icon"
        app:layout_constraintEnd_toStartOf="@+id/google_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/google_header"
        android:layout_width="189dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/google_header"
        android:src="@drawable/google_africa"
        app:layout_constraintBottom_toBottomOf="@+id/gads_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/gradient_button"
        android:fadingEdgeLength="40dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submission" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/ic_keyboard_backspace_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/gads_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>